-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.1.0
-
None
-
3
-
4955
dx_get_block() will mask logic block number to 24-bits, which means we can only have 16-M blocks and a few giga FIDs, this is not enough because we have one single IAM dir to save all (fids, ino) for MDT.
I think the 24-bits bitmask is not necessary at all because we just inherit it from ext3/4 and which is reserved for coalesce-on-delete and unlikely to happen at all. So the simplest workaround for this is just removing the bitmask so we have plenty block numbers and FIDs at least for all recent requirements.