LU-470 remove 24-bits mask for logic block number of IAM dir

dx_get_block() will mask logic block number to 24-bits, which means we
can only have 16-M blocks and a few giga FIDs, this is not enough
because we have one single IAM container to save all (fids, ino) for MDT

Change-Id: I188efc65ed68caf12149f03c431481cd603effc1
Signed-off-by: Liang Zhen <liang@whamcloud.com>
Reviewed-on: http://review.whamcloud.com/1024
Tested-by: Hudson
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>